# CircuitPython_TicStepper

./: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.py  ticstepper.py
.github/workflows/: build.yml  release.yml
circuitpython_ticstepper/: __init__.py  constants.py  i2c.py  i2c_motor.py  tic36v4.py
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: ticstepper_simpletest.py
